Validation of createiamroles, creategroups and keyimport in special vpc

--- a/playbooks/roles/createinstances/templates/db-change-record-set.j2
+++ b/playbooks/roles/createinstances/templates/db-change-record-set.j2
@@ -7,6 +7,7 @@
 				"Name": "db.djaodjin.internal",
 				"Type": "A",
 				"TTL" : 7200,
+				"Region": "{{aws_region}}",
 				"ResourceRecords" : [
 					{
 						"Value" : "{{private_ip}}"
