--- a/playbooks/roles/createinstances/templates/dev-change-record-set.j2
+++ b/playbooks/roles/createinstances/templates/dev-change-record-set.j2
@@ -6,6 +6,7 @@
 			"ResourceRecordSet" : {
 				"Name": "dev.djaodjin.internal",
 				"Type": "A",
+				"Region": "{{aws_region}}",
 				"TTL" : 7200,
 				"ResourceRecords" : [
 					{
