matching create/delete of authorized
- ec2 roles cannot upload to s3 bucket already
- restore eagerly deleted egress rules
- create/delete groups and s3 bucket

--- a/playbooks/roles/creates3bucket/files/s3-policy.j2
+++ b/playbooks/roles/creates3bucket/files/s3-policy.j2
@@ -25,11 +25,7 @@
          "Effect":"Deny",
          "Principal":{
            "AWS" : [
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{castle_gate_name}}",
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{vault_name}}",
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{courtyard_name}}",
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{kitchen_door_name}}",
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{watch_tower_name}}"
+              "arn:aws:iam::{{aws_account}}:user/{{deployuser}}"
            ]
          },
          "Action":"s3:PutObject",
