--- a/playbooks/roles/createinstances/templates/vault-cloud-init-script.j2
+++ b/playbooks/roles/createinstances/templates/vault-cloud-init-script.j2
@@ -13,8 +13,7 @@ pip install awscli
 mkdir /tmp/ansible/ && cd /tmp/ansible/ && git clone {{remote_src_top}}/drop.git
 
 # Upload ldap certificates
-aws s3 cp s3://{{tag_prefix}}deployutils/identities/dbs.internal/etc/pki/tls/certs/dbs.internal.crt /etc/pki/tls/certs/dbs.internal.crt
-aws s3 cp s3://{{tag_prefix}}deployutils/identities/dbs.internal/etc/pki/tls/private/dbs.internal.key /etc/pki/tls/private/dbs.internal.key
+aws s3 cp s3://{{tag_prefix}}deployutils/identities/dbs.internal / --recursive
 
 # Run dservices scripts
 sudo chmod -R 755 /tmp/ansible/drop/
