--- a/playbooks/roles/createinstances/templates/kitchen-door-cloud-init-script.j2
+++ b/playbooks/roles/createinstances/templates/kitchen-door-cloud-init-script.j2
@@ -1,11 +1,11 @@
 #!/bin/bash
 
 # Install packages to bootstrap configuration of instance
-yum -y install git python-pip
+yum -y install git python-pip python-virtualenv
 
 # Download and prepare the configuration tool called dservices
 mkdir -p /tmp/ansible/reps
-virtualenv /tmp/ansible
+virtualenv-2.7 /tmp/ansible
 git clone {{remote_src_top}}/drop.git /tmp/ansible/reps/drop
 /tmp/ansible/bin/pip install awscli
 
@@ -13,4 +13,4 @@ git clone {{remote_src_top}}/drop.git /tmp/ansible/reps/drop
 /tmp/ansible/bin/aws s3 cp s3://{{tag_prefix}}deployutils/identities/dev.internal / --recursive
 
 # Run configuration tool with appropriate profile
-/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py /tmp/ansible/reps/drop/share/tero/backstage.xml
+/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DdomainName={{domain_name}} /tmp/ansible/reps/drop/share/tero/backstage.xml
