refactor elasticip tasks, fix s3 policy and identities

--- a/playbooks/roles/creates3bucket/files/s3-policy.j2
+++ b/playbooks/roles/creates3bucket/files/s3-policy.j2
@@ -15,10 +15,14 @@
             ]
          },
          "Action": [
+           "s3:ListBucket",
            "s3:GetObjectAcl",
            "s3:GetObject"
          ],
-         "Resource": "arn:aws:s3:::{{tag_prefix}}deployutils/*"
+         "Resource": [
+           "arn:aws:s3:::{{tag_prefix}}deployutils",
+           "arn:aws:s3:::{{tag_prefix}}deployutils/*"
+           ]
       },
       {
          "Sid":"DenyUnEncryptedObjectUploads",
