--- a/playbooks/roles/createinstances/templates/castle-gate-cloud-init-script.j2
+++ b/playbooks/roles/createinstances/templates/castle-gate-cloud-init-script.j2
@@ -1,21 +1,15 @@
 #!/bin/bash
-# Castle-gate instance configuration
+# webfront instance configuration
 
-# Install git package in instance
-yum -y install git
+# Install git and package in instance
+yum -y install git python-pip
 
-#Install pip package
-yum -y install python-pip
-
-#Install awcli
+# Install awcli and Download keys, certificates, etc.
 pip install awscli
-
-# Clone drop github repository in /tmp/ansible/
-mkdir /tmp/ansible/ && cd /tmp/ansible/ && git clone {{remote_src_top}}/drop.git
-
-# Upload ldap public certificates
 aws s3 cp s3://{{tag_prefix}}deployutils/identities/web.internal / --recursive
 
+# Clone drop github repository in /tmp/ansible and
 # Run dservices scripts
-sudo chmod -R 755 /tmp/ansible/drop/
-sudo /tmp/ansible/drop/src/dservices.py -DdomainName={{domain_name}} /tmp/ansible/drop/share/tero/webfront.xml
+mkdir -p /tmp/ansible && cd /tmp/ansible && git clone {{remote_src_top}}/drop.git
+virtualenv --system-site-packages /tmp/ansible
+/tmp/ansible/bin/python /tmp/ansible/drop/src/dservices.py -DdomainName={{domain_name}} /tmp/ansible/drop/share/tero/webfront.xml
