--- a/playbooks/roles/creates3bucket/files/s3-policy.j2
+++ b/playbooks/roles/creates3bucket/files/s3-policy.j2
@@ -20,8 +20,8 @@
            "s3:GetObject"
          ],
          "Resource": [
-           "arn:aws:s3:::{{tag_prefix}}deployutils",
-           "arn:aws:s3:::{{tag_prefix}}deployutils/*"
+           "arn:aws:s3:::{{deployutils_bucket}}",
+           "arn:aws:s3:::{{deployutils_bucket}}/*"
            ]
       },
       {
@@ -33,7 +33,7 @@
            ]
          },
          "Action":"s3:PutObject",
-         "Resource":"arn:aws:s3:::{{tag_prefix}}deployutils/*",
+         "Resource":"arn:aws:s3:::{{deployutils_bucket}}/*",
          "Condition":{
             "StringNotEquals":{
                "s3:x-amz-server-side-encryption":"AES256"
@@ -42,4 +42,3 @@
       }
    ]
 }
-
