--- a/playbooks/roles/createinstances/templates/castle-gate-cloud-init-script.j2
+++ b/playbooks/roles/createinstances/templates/castle-gate-cloud-init-script.j2
@@ -7,19 +7,19 @@ yum -y install git python-virtualenv python-pip
 # Install awcli and Download keys, certificates, etc.
 pip install awscli
 aws s3 cp s3://{{deployutils_bucket}}/identities/web.internal / --recursive
+chown fedora:fedora /home/fedora/.ssh
+chmod 600 /home/fedora/.ssh/jenkins_rsa
 
 # Clone drop github repository in /tmp/ansible and
 # Run dservices scripts
-mkdir -p /tmp/ansible && cd /tmp/ansible && git clone {{remote_dservices_repo}}
+mkdir -p /tmp/ansible/reps && cd /tmp/ansible/reps && git clone {{remote_dservices_repo}}
 virtualenv-2.7 --system-site-packages /tmp/ansible
-/tmp/ansible/bin/python /tmp/ansible/drop/src/dservices.py -DldapHost=dbs.{{tag_prefix}}ec2.internal -DdomainName={{domain_name}} /tmp/ansible/drop/share/tero/webfront.xml
+/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DldapHost=dbs.{{tag_prefix}}ec2.internal -DdomainName={{domain_name}} /tmp/ansible/reps/drop/share/tero/webfront.xml
 
 # Install the web application
-mkdir -p /var/www/{{webapp}}/bin
-cp /tmp/ansible/drop/src/tero/__init__.py /var/www/{{webapp}}/bin/dws
-chmod 755 /var/www/{{webapp}}/bin/dws
-cd /var/www && {{webapp}}/bin/dws build {{remote_src_top}}tests/client-test.git/{{webapp}}.xml
+/usr/bin/install -D  -o fedora -g fedora -m 755 /tmp/ansible/reps/drop/src/tero/__init__.py /var/www/{{webapp}}/bin/dws
+cd /var/www && sudo -u fedora {{webapp}}/bin/dws build {{remote_src_top}}tests/client-test.git/{{webapp}}.xml
 cd /etc/systemd/system && ln -s /var/www/{{webapp}}/etc/systemd/system/{{webapp}}.service
-chown nginx:nginx /var/www/{{webapp}}/var/run
+/usr/bin/install -o nginx -g nginx -d /var/www/{{webapp}}/var/run
 # XXX systemctl enable {{webapp}}.service
 systemctl start {{webapp}}.service
