--- a/playbooks/roles/creates3bucket/files/s3-policy.j2
+++ b/playbooks/roles/creates3bucket/files/s3-policy.j2
@@ -7,11 +7,11 @@
          "Effect": "Allow",
          "Principal": {
            "AWS": [
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{castle_gate_name}}",
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{vault_name}}",
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{courtyard_name}}",
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{kitchen_door_name}}",
-              "arn:aws:iam::{{aws_account}}:role/{{tag_prefix}}{{watch_tower_name}}"
+              "arn:aws:iam::{{aws_account}}:role/{{castle_gate}}",
+              "arn:aws:iam::{{aws_account}}:role/{{courtyard}}",
+              "arn:aws:iam::{{aws_account}}:role/{{kitchen_door}}",
+              "arn:aws:iam::{{aws_account}}:role/{{vault}}",
+              "arn:aws:iam::{{aws_account}}:role/{{watch_tower}}"
             ]
          },
          "Action": [
