create fully functional images

--- a/playbooks/roles/createdbsbase/templates/dbs-cloud-init-script.j2
+++ b/playbooks/roles/createdbsbase/templates/dbs-cloud-init-script.j2
@@ -8,7 +8,23 @@ set -e
 yum -y install git python-virtualenv python-pip
 pip install awscli
 
+# Mount encrypted volume as /var after copying previous content over.
+if [ ! -d /var.old ] ; then
+    mkfs.ext4 -m 0 /dev/xvdf
+    mkdir -p /mnt/encvol
+    mount /dev/xvdf /mnt/encvol
+    cd /var && cp -ax * /mnt/encvol
+    cd /
+    umount /dev/xvdf
+    mv /var /var.old
+    mkdir -p /var
+    mount /dev/xvdf /var
+fi
+
+# Install identities
+aws s3 cp s3://{{deployutils_bucket}}/identities/dbs.internal / --recursive
+
 # Clone configuration scripts repository and setup the machine.
 mkdir -p /tmp/ansible/reps && cd /tmp/ansible/reps && git clone {{remote_dservices_repo}}
 virtualenv-2.7 --system-site-packages /tmp/ansible
-/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DldapHost=localhost -DdomainName=localhost.local -DldapPasswordHash="{{ldapPasswordHash}}" /tmp/ansible/reps/drop/share/tero/databases.xml
+/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DSYSCONFDIR=/var -DldapHost=localhost -DdomainName=localhost.local -DldapPasswordHash="{{ldapPasswordHash}}" /tmp/ansible/reps/drop/share/tero/databases.xml
