--- a/playbooks/roles/createdbsinstances/templates/dbs-cloud-init-script.j2
+++ b/playbooks/roles/createdbsinstances/templates/dbs-cloud-init-script.j2
@@ -1,23 +1,11 @@
 #!/bin/bash
 #
-# databases machine
+# live databases machine
 
 set -e
 
-if [ ! -d /mnt/encvol ] ; then
-    # Mount encrypted volume as /var after copying previous content over.
-    mkfs.ext4 -m 0 /dev/xvdf
-    mkdir -p /mnt/encvol
-    mount /dev/xvdf /mnt/encvol
-    cd /var && cp -ax * /mnt/encvol
-    cd /
-    umount /dev/xvdf
-    mv /var /var.old
-    mkdir -p /var
-    mount /dev/xvdf /var
-fi
+# Mount encrypted volume with databases content as /var.
+mount /dev/xvdf /var
 
-# Install identities
-aws s3 cp s3://{{deployutils_bucket}}/identities/dbs.internal / --recursive
-
+# Complete configuration with runtime information.
 /tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DldapHost=dbs.{{tag_prefix}}ec2.internal -DdomainName={{domain_name}} -DldapPasswordHash="{{ldapPasswordHash}}" /tmp/ansible/reps/drop/share/tero/databases.xml
