--- a/playbooks/roles/createdbsinstances/templates/dbs-cloud-init-script.j2
+++ b/playbooks/roles/createdbsinstances/templates/dbs-cloud-init-script.j2
@@ -7,5 +7,9 @@ set -e
 # Mount encrypted volume with databases content as /var.
 mount /dev/xvdf /var
 
+# Install identities. Since we don't have Internet connection here, we copy
+# identities from the encrypted volume that was previously mounted.
+cp -rf /var/pki /etc
+
 # Complete configuration with runtime information.
 /tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DldapHost=dbs.{{tag_prefix}}ec2.internal -DdomainName={{domain_name}} -DldapPasswordHash="{{ldapPasswordHash}}" /tmp/ansible/reps/drop/share/tero/databases.xml
