--- a/playbooks/roles/createwebinstances/templates/web-cloud-init-script.j2
+++ b/playbooks/roles/createwebinstances/templates/web-cloud-init-script.j2
@@ -18,8 +18,8 @@ virtualenv-2.7 --system-site-packages /tmp/ansible
 
 # Install the web application
 /usr/bin/install -D  -o fedora -g fedora -m 755 /tmp/ansible/reps/drop/src/tero/__init__.py /var/www/{{webapp}}/bin/dws
-cd /var/www && sudo -u fedora {{webapp}}/bin/dws build {{remote_src_top}}tests/client-test.git/{{webapp}}.xml
+cd /var/www && sudo -u fedora {{webapp}}/bin/dws build {{remote_src_top}}{{webapp}}.git/{{webapp}}.xml
 cd /etc/systemd/system && ln -s /var/www/{{webapp}}/etc/systemd/system/{{webapp}}.service
 /usr/bin/install -o nginx -g nginx -d /var/www/{{webapp}}/var/run
-# XXX systemctl enable {{webapp}}.service
+systemctl enable {{webapp}}.service
 systemctl start {{webapp}}.service
