--- a/share/playbooks/roles/createinstances/templates/kitchen-door-cloud-init-script.j2
+++ b/share/playbooks/roles/createinstances/templates/kitchen-door-cloud-init-script.j2
@@ -10,6 +10,6 @@ aws s3 cp s3://{{deployutils_bucket}}/identities/dev.internal / --recursive
 
 # Clone drop github repository in /tmp/ansible and
 # Run dservices scripts
-mkdir -p /tmp/ansible && cd /tmp/ansible && git clone {{remote_dservices_repo}}
+mkdir -p /tmp/ansible && cd /tmp/ansible && git clone {{remote_drop_repo}}
 virtualenv-2.7 --system-site-packages /tmp/ansible
 /tmp/ansible/bin/python /tmp/ansible/drop/src/dservices.py -DdomainName={{domain_name}} /tmp/ansible/drop/share/profiles/backstage.xml
