--- a/share/playbooks/roles/create_base_web/templates/web-cloud-init-script.j2
+++ b/share/playbooks/roles/create_base_web/templates/web-cloud-init-script.j2
@@ -5,12 +5,20 @@
 set -x
 set -e
 
+siteTop=/var/www/djaoapp
+
 # Install necessary packages to bootstrap configuration
 /usr/bin/dnf -y update
-/usr/bin/dnf -y install docker awscli
+/usr/bin/dnf -y install docker awscli git-core python-virtualenv
+
+# Clone drop github repository in /tmp/ansible and run dservices scripts
+mkdir -p ${siteTop}/reps
+virtualenv --system-site-packages ${siteTop}
+cd ${siteTop}
+git clone {{remote_drop_repo}} reps/drop
+bin/python reps/drop/src/dservices.py -DetcDir=/etc -DldapHost=dbs.{{tag_prefix}}ec2.internal -DdomainName={{domain_name}} reps/drop/share/profiles/webfront.xml
 
 # Ansible will be waiting for this server to respond
 # before it continues with registering the AMI.
-cd /home/fedora
-sudo -u fedora echo "DONE" > index.html
-/usr/bin/python3 -m http.server 80
+echo "DONE" > index.html
+#/usr/bin/python3 -m http.server 80
