--- a/share/playbooks/roles/createwebinstances/templates/web-cloud-init-script.j2
+++ b/share/playbooks/roles/createwebinstances/templates/web-cloud-init-script.j2
@@ -1,25 +1,22 @@
 #!/bin/bash
-# webfront instance configuration
+#
+# Configuration of a webfront instance (based of web base AMI created
+# by the create_web_base Ansible role).
 
-# Install git and package in instance
-yum -y install git python-virtualenv python-pip
+set -x
+set -e
+
+siteTop=/var/www
 
 # Install awcli and Download keys, certificates, etc.
-pip install awscli
 aws s3 cp s3://{{deployutils_bucket}}/identities/web.internal / --recursive
 chown fedora:fedora /home/fedora/.ssh
 chmod 600 /home/fedora/.ssh/jenkins_rsa
 
-# Clone drop github repository in /tmp/ansible and
-# Run dservices scripts
-mkdir -p /tmp/ansible/reps && cd /tmp/ansible/reps && git clone {{remote_dservices_repo}}
-virtualenv-2.7 --system-site-packages /tmp/ansible
-/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DldapHost=dbs.{{tag_prefix}}ec2.internal -DdomainName={{domain_name}} /tmp/ansible/reps/drop/share/profiles/webfront.xml
-
 # Install the web application
-/usr/bin/install -D  -o fedora -g fedora -m 755 /tmp/ansible/reps/drop/src/tero/__init__.py /var/www/{{webapp}}/bin/dws
-cd /var/www && sudo -u fedora {{webapp}}/bin/dws build {{remote_src_top}}{{webapp}}.git/{{webapp}}.xml
-cd /etc/systemd/system && ln -s /var/www/{{webapp}}/etc/systemd/system/{{webapp}}.service
-/usr/bin/install -o nginx -g nginx -d /var/www/{{webapp}}/var/run
+cd ${siteTop}
+sudo -u fedora {{webapp}}/bin/dws build {{remote_src_top}}{{webapp}}.git/{{webapp}}.xml
+cd /etc/systemd/system && ln -s ${siteTop}/{{webapp}}/etc/systemd/system/{{webapp}}.service
+/usr/bin/install -o nginx -g nginx -d ${siteTop}/{{webapp}}/var/run
 systemctl enable {{webapp}}.service
 systemctl start {{webapp}}.service
