--- a/share/playbooks/roles/create_amis/templates/webfront-cloud-init-script.j2
+++ b/share/playbooks/roles/create_amis/templates/webfront-cloud-init-script.j2
@@ -9,7 +9,7 @@ siteTop=/var/www/djaoapp
 
 # Install necessary packages to bootstrap configuration
 /usr/bin/dnf -y update
-/usr/bin/dnf -y install docker awscli git-core python-virtualenv
+/usr/bin/dnf -y install awscli git-core python-virtualenv
 
 # Clone drop github repository in /tmp/ansible and run dservices scripts
 mkdir -p ${siteTop}/reps
