--- a/share/playbooks/roles/createdbsinstances/templates/dbs-cloud-init-script.j2
+++ b/share/playbooks/roles/createdbsinstances/templates/dbs-cloud-init-script.j2
@@ -12,4 +12,4 @@ mount /dev/xvdf /var
 cp -rf /var/pki /etc
 
 # Complete configuration with runtime information.
-/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DldapHost=dbs.{{tag_prefix}}ec2.internal -DdomainName={{domain_name}} -DldapPasswordHash="{{ldapPasswordHash}}" /tmp/ansible/reps/drop/share/profiles/databases.xml
+/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DetcDir=/etc -DldapHost=dbs.{{tag_prefix}}ec2.internal -DcompanyDomain={{company_domain}} -DldapPasswordHash="{{ldapPasswordHash}}" -Dvpc_cidr={{vpc_cidr}} /tmp/ansible/reps/drop/share/profiles/databases.xml
