creates volume at same time as the instance
If we separate those two steps, then the volume will not
attach and the cloud init script cannot format it.

--- a/share/playbooks/roles/create_dbs_ami/templates/dbs-cloud-init-script.j2
+++ b/share/playbooks/roles/create_dbs_ami/templates/dbs-cloud-init-script.j2
@@ -32,6 +32,6 @@ virtualenv -p python3 --system-site-packages /tmp/ansible
 /tmp/ansible/bin/python /tmp/ansible/reps/drop/src/dservices.py -DetcDir=/etc -DldapHost=localhost -DcompanyDomain={{company_domain}} -DldapPasswordHash="{{ldapPasswordHash}}" -Dvpc_cidr={{vpc_cidr}} /tmp/ansible/reps/drop/share/profiles/databases.xml
 
 # Restore database from flat files
-/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/drestore.py --domainName={{company_domain}} /var/backups/*
+/tmp/ansible/bin/python /tmp/ansible/reps/drop/src/drestore.py --domainName={{company_domain}} /var/backups/ldap/*.ldif /var/backups/pgsql/*.sql
 
 sudo -u fedora touch /home/fedora/.dbs-done
