installs even when not directly under srcTop

--- a/share/playbooks/roles/create_instance_backstage/templates/backstage-cloud-init-script.j2
+++ b/share/playbooks/roles/create_instance_backstage/templates/backstage-cloud-init-script.j2
@@ -1,7 +1,7 @@
 #!/bin/bash
 #
 # Configuration of a backstage instance (based of web base AMI created
-# by the ``create_webfront_ami`` ansible role).
+# by the ``create_backstage_instance`` ansible role).
 
 set -x
 set -e
